--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p class="probootstrap-copyright">&copy; 2017 <a href="https://uicookies.com/">uiCookies:Explorer</a> All Rights Reserved.</p>
+          <!-- <p class="probootstrap-copyright">&copy; 2017 <a href="https://uicookies.com/">uiCookies:Explorer</a> All Rights Reserved.</p>
           <ul class="probootstrap-social">
             <li><a href="#"><i class="icon-twitter"></i></a></li>
             <li><a href="#"><i class="icon-facebook2"></i></a></li>
             <li><a href="#"><i class="icon-instagram2"></i></a></li>
             <li><a href="#"><i class="icon-google-plus"></i></a></li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div>
