--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="index.html" class="probootstrap-logo">Explorer<span>.</span></a>
+        <a href="index.html" class="probootstrap-logo">作品集主页<span></span></a>
         
         <a href="#" class="probootstrap-burger-menu visible-xs" ><i>Menu</i></a>
         <div class="mobile-menu-overlay"></div>
