--- a/分类.html
+++ b/分类.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>郭苹作品集</title>
-    <meta name="description" content="郭苹的作品集">
-    <meta name="keywords" content="郭苹, 作品集, 简历, 履历">
-
+    <meta name="description" content="Free Bootstrap Theme by uicookies.com">
+    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -32,8 +32,8 @@
 
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="分类.html">分类</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="分类.html">分类</a></li>
             <!-- <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li> -->
           </ul>
@@ -58,7 +58,7 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
           <h2>我是小郭苹</h2>
-          <p>本科大连理工大学，雕塑专业</p>    
+          <p>TO-DO</p>    
         </div>
       </div>
 
