--- a/index.html
+++ b/index.html
@@ -1,64 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>郭苹作品集</title>
-    <meta name="description" content="郭苹的作品集">
-    <meta name="keywords" content="郭苹, 作品集, 简历, 履历">
 
-    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles-merged.css">
-    <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="css/custom.css">
+<head>
+  <meta charset="utf-8">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
-    <!--[if lt IE 9]>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>郭苹作品集</title>
+  <meta name="description" content="郭苹的作品集">
+  <meta name="keywords" content="郭苹, 作品集, 简历, 履历">
+
+  <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles-merged.css">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/custom.css">
+
+  <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
+</head>
+
+<body>
 
   <!-- START: header -->
-  
+
   <div class="probootstrap-loader"></div>
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="index.html" class="probootstrap-logo">作品集主页<span></span></a>
-        
-        <a href="#" class="probootstrap-burger-menu visible-xs" ><i>Menu</i></a>
-        <div class="mobile-menu-overlay"></div>
+      <a href="index.html" class="probootstrap-logo">作品集主页<span></span></a>
 
-        <nav role="navigation" class="probootstrap-nav hidden-xs">
-          <ul class="probootstrap-main-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="分类.html">分类</a></li>
-            <!-- <li><a href="about.html">About</a></li>
+      <a href="#" class="probootstrap-burger-menu visible-xs"><i>Menu</i></a>
+      <div class="mobile-menu-overlay"></div>
+
+      <nav role="navigation" class="probootstrap-nav hidden-xs">
+        <ul class="probootstrap-main-nav">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="分类.html">分类</a></li>
+          <!-- <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li> -->
-          </ul>
-          <div class="extra-text visible-xs"> 
-            <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
-            <h5>地址</h5>
-            <p>大连理工大学</p>
-            <!-- <h5>Connect</h5> -->
-            <!-- <ul class="social-buttons">
+        </ul>
+        <div class="extra-text visible-xs">
+          <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
+          <h5>地址</h5>
+          <p>大连理工大学</p>
+          <!-- <h5>Connect</h5> -->
+          <!-- <ul class="social-buttons">
               <li><a href="#"><i class="icon-twitter"></i></a></li>
               <li><a href="#"><i class="icon-facebook2"></i></a></li>
               <li><a href="#"><i class="icon-instagram2"></i></a></li>
             </ul> -->
-          </div>
-        </nav>
+        </div>
+      </nav>
     </div>
   </header>
   <!-- END: header -->
-  
+
   <div class="probootstrap-section">
     <div class="container text-center">
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
           <h2>我是小郭苹</h2>
-          <p>本科大连理工大学，雕塑专业</p>    
+          <p>本科大连理工大学，雕塑专业</p>
         </div>
       </div>
 
@@ -108,7 +118,7 @@
         </div>
       </div>
 
-       <div class="row probootstrap-gutter16">
+      <div class="row probootstrap-gutter16">
         <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="恐龙.html" class="img-bg" style="background-image: url(img/猴子1.png);">
             <div class="probootstrap-photo-details">
@@ -126,7 +136,7 @@
           </a>
         </div>
       </div>
-      
+
     </div>
   </div>
 
@@ -149,11 +159,12 @@
   <div class="gototop js-top">
     <a href="#" class="js-gotop"><i class="icon-chevron-thin-up"></i></a>
   </div>
-  
+
 
   <script src="js/scripts.min.js"></script>
   <script src="js/main.min.js"></script>
   <script src="js/custom.js"></script>
 
-  </body>
+</body>
+
 </html>
