--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-      <a href="index.html" class="probootstrap-logo">作品集主页<span></span></a>
+      <a href="index.html" class="probootstrap-logo">郭苹作品集<span></span></a>
 
       <a href="#" class="probootstrap-burger-menu visible-xs"><i>Menu</i></a>
       <div class="mobile-menu-overlay"></div>
@@ -43,7 +43,7 @@
       <nav role="navigation" class="probootstrap-nav hidden-xs">
         <ul class="probootstrap-main-nav">
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="分类.html">分类</a></li>
+          <!-- <li><a href="分类.html">分类</a></li> -->
           <!-- <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li> -->
         </ul>
@@ -67,36 +67,44 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
-          <h2>我是小郭苹</h2>
+          <h2>郭苹</h2>
           <p>本科大连理工大学，雕塑专业</p>
         </div>
       </div>
 
       <div class="row probootstrap-gutter16">
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="恐龙.html" class="img-bg" style="background-image: url(img/哥哥.jpeg);">
+          <a href="恐龙.html" class="img-bg" style="background-image: url(img/猴子1.png);">
             <div class="probootstrap-photo-details">
-              <h2>最爱的哥哥</h2>
-              <!-- <p></p> -->
+              <h2>数字雕塑作品</h2>
+              <p>更多...</p>
             </div>
           </a>
         </div>
-        <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="恐龙.html" class="img-bg" style="background-image: url(img/恐龙1.jpeg);">
+        <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
+          <a href="恐龙.html" class="img-bg" style="background-image: url(img/仕女1.jpeg);">
             <div class="probootstrap-photo-details">
-              <h2 style="color: black;">恐龙</h2>
-              <p style="color: slategrey;">更多...</p>
+              <h2 style="color: black;">直接材料作品</h2>
+              <p style="color: black;">更多...</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
+          <a href="恐龙.html" class="img-bg" style="background-image: url(img/老太太.jpeg);">
+            <div class="probootstrap-photo-details">
+              <h2>手绘作品</h2>
+              <p>更多...</p>
             </div>
           </a>
         </div>
       </div>
 
-      <div class="row probootstrap-gutter16">
+      <!-- <div class="row probootstrap-gutter16">
         <div class="col-md-5 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="恐龙.html" class="img-bg" style="background-image: url(img/花.jpeg);">
             <div class="probootstrap-photo-details">
               <h2>花</h2>
-              <!-- <p>Landscape</p> -->
+              <p>Landscape</p>
             </div>
           </a>
         </div>
@@ -104,7 +112,7 @@
           <a href="恐龙.html" class="img-bg" style="background-image: url(img/萝莉.jpeg);">
             <div class="probootstrap-photo-details">
               <h2 style="color: burlywood;">萝莉</h2>
-              <!-- <p>Landscape</p> -->
+              <p>Landscape</p>
             </div>
           </a>
         </div>
@@ -131,11 +139,11 @@
           <a href="恐龙.html" class="img-bg" style="background-image: url(img/老太太.jpeg);">
             <div class="probootstrap-photo-details">
               <h2>老奶奶</h2>
-              <!-- <p>Landscape</p> -->
+              <p>Landscape</p>
             </div>
           </a>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </div>
