--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <div class="container">
       <a href="index.html" class="probootstrap-logo">郭苹作品集<span></span></a>
 
-      <a href="#" class="probootstrap-burger-menu visible-xs"><i>Menu</i></a>
+      <a href="#" class="probootstrap-burger-menu visible-xs"><i>菜单</i></a>
       <div class="mobile-menu-overlay"></div>
 
       <nav role="navigation" class="probootstrap-nav hidden-xs">
         <ul class="probootstrap-main-nav">
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="index.html">主页</a></li>
           <!-- <li><a href="分类.html">分类</a></li> -->
           <!-- <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li> -->
