--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div class="row probootstrap-gutter16">
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="恐龙.html" class="img-bg" style="background-image: url(img/猴子1.png);">
+          <a href="数字雕塑.html" class="img-bg" style="background-image: url(img/猴子1.png);">
             <div class="probootstrap-photo-details">
               <h2>数字雕塑作品</h2>
               <p>更多...</p>
