--- a/数字雕塑.html
+++ b/数字雕塑.html
@@ -221,7 +221,7 @@
         </div>
       </div>
 
-      <hr/>
+      <!-- <hr/>
       <br/>
 
       <div class="row">
@@ -239,7 +239,7 @@
         <div class="col-md-8 col-md-offset-2 mb40">
           <p><a href="img/黑色2.jpeg" class="image-popup"><img src="img/黑色2.jpeg" class="img-responsive"></a></p>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </div>
