--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <nav role="navigation" class="probootstrap-nav hidden-xs">
         <ul class="probootstrap-main-nav">
           <li class="active"><a href="index.html">主页</a></li>
-          <!-- <li><a href="分类.html">分类</a></li> -->
-          <!-- <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li> -->
+          <li><a href="数字雕塑.html">数字雕塑</a></li>
+          <li><a href="直接材料.html">直接材料</a></li>
+          <li><a href="手绘.html">手绘</a></li>
         </ul>
         <div class="extra-text visible-xs">
           <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -82,7 +82,7 @@
           </a>
         </div>
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="恐龙.html" class="img-bg" style="background-image: url(img/仕女1.jpeg);">
+          <a href="直接材料.html" class="img-bg" style="background-image: url(img/仕女1.jpeg);">
             <div class="probootstrap-photo-details">
               <h2 style="color: black;">直接材料作品</h2>
               <p style="color: black;">更多...</p>
@@ -90,7 +90,7 @@
           </a>
         </div>
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="恐龙.html" class="img-bg" style="background-image: url(img/老太太.jpeg);">
+          <a href="手绘.html" class="img-bg" style="background-image: url(img/老太太.jpeg);">
             <div class="probootstrap-photo-details">
               <h2>手绘作品</h2>
               <p>更多...</p>
