--- a/手绘.html
+++ b/手绘.html
@@ -12,9 +12,9 @@
   <meta name="theme-color" content="#ffffff">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>数字雕塑-郭苹作品集</title>
+  <title>手绘-郭苹作品集</title>
   <meta name="description" content="郭苹的作品集">
-  <meta name="keywords" content="郭苹, 作品集, 数字雕塑, 简历, 履历">
+  <meta name="keywords" content="郭苹, 作品集, 手绘, 简历, 履历">
 
   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
   <link rel="stylesheet" href="css/styles-merged.css">
@@ -43,9 +43,9 @@
       <nav role="navigation" class="probootstrap-nav hidden-xs">
         <ul class="probootstrap-main-nav">
           <li><a href="index.html">主页</a></li>
-          <li class="active"><a href="数字雕塑.html">数字雕塑</a></li>
+          <li><a href="数字雕塑.html">数字雕塑</a></li>
           <li><a href="直接材料.html">直接材料</a></li>
-          <li><a href="手绘.html">手绘</a></li>
+          <li class="active"><a href="手绘.html">手绘</a></li>
         </ul>
         <div class="extra-text visible-xs">
           <a href="#" class="probootstrap-burger-menu"><i>菜单</i></a>
@@ -68,156 +68,112 @@
 
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40 text-center">
-          <h2>数字雕塑作品</h2>
+          <h2>手绘作品</h2>
           <p>你的一段描述</p>
         </div>
       </div>
 
-      <br />
-      <hr />
-      <br />
+      <br/>
+      <hr/>
+      <br/>
 
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40 text-center">
-          <p style="color: black;">《王者降临——地狱火》</p>
-          <p style="color: dimgray;">52toys王者降临主题的参赛作品</p>
+          <p style="color: black;">《守望》</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/猴子1.png" class="image-popup"><img src="img/猴子1.png" class="img-responsive"></a></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/猴子2.png" class="image-popup"><img src="img/猴子2.png" class="img-responsive"></a></p>
+          <p><a href="img/老太太.jpeg" class="image-popup"><img src="img/老太太.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
-      <hr />
-      <br />
+      <hr/>
+      <br/>
 
       <div class="row">
         <div class="col-md-12 col-md-offset-0 mb40 text-center">
-          <p style="color: black;">《妖妃——水墨情》</p>
-          <p style="color: dimgray;">以反传统的角度和中国传统写意的方式去描绘仕女题材，表达当代与传统观念的冲突与联系性</p>
+          <p style="color: black;">《半身像》</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/瘦1.png" class="image-popup"><img src="img/瘦1.png" class="img-responsive"></a></p>
+          <p><a href="img/速写.jpeg" class="image-popup"><img src="img/速写.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4 col-md-offset-2">
-          <p><a href="img/瘦3.png" class="image-popup"><img src="img/瘦3.png" class="img-responsive"></a></p>
-        </div>
-        <div class="col-md-4">
-          <p><a href="img/瘦2.png" class="image-popup"><img src="img/瘦2.png" class="img-responsive"></a></p>
-        </div>
-      </div>
-
-      <br />
-      <hr />
-      <br />
+      
+      <hr/>
+      <br/>
 
       <div class="row">
         <div class="col-md-12 col-md-offset-0 mb40 text-center">
-          <p style="color: black;">《舞动唐韵》</p>
-          <p style="color: dimgray;">以开放的角度认知传统</p>
+          <p style="color: black;">《手》</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/胖妞2.png" class="image-popup"><img src="img/胖妞2.png" class="img-responsive"></a></p>
+          <p><a href="img/两个手.jpeg" class="image-popup"><img src="img/两个手.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-md-offset-1">
-          <p><a href="img/胖妞1.png" class="image-popup"><img src="img/胖妞1.png" class="img-responsive"></a></p>
-        </div>
-        <div class="col-md-6">
-          <p><a href="img/胖妞3.png" class="image-popup"><img src="img/胖妞3.png" class="img-responsive"></a></p>
+        <div class="col-md-6 col-md-offset-3 mb40">
+          <p><a href="img/两个手2.jpeg" class="image-popup"><img src="img/两个手2.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
-      <br />
-      <hr />
-      <br />
+      <hr/>
+      <br/>
 
       <div class="row">
         <div class="col-md-12 col-md-offset-0 mb40 text-center">
-          <p style="color: black;">《耳鼠》</p>
-          <p style="color: dimgray;">《山海经》有云：耳鼠，兽，其状如鼠，而菟首麋身，其音如獆犬，以其尾飞，食之不采，又可以御百毒。</p>
+          <p style="color: black;">《年》</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-8 col-md-offset-2 mb40">
-          <p><a href="img/老鼠1.jpeg" class="image-popup"><img src="img/老鼠1.jpeg" class="img-responsive"></a></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 mb40">
-          <p><a href="img/老鼠2.jpeg" class="image-popup"><img src="img/老鼠2.jpeg" class="img-responsive"></a></p>
+          <p><a href="img/包饺子.jpeg" class="image-popup"><img src="img/包饺子.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
-      <hr />
-      <br />
+      <hr/>
+      <br/>
+
+      <div class="row">
+        <div class="col-md-12 col-md-offset-0 mb40 text-center">
+          <p style="color: black;">《南小鸟》</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5 col-md-offset-3 mb40">
+          <p><a href="img/萝莉.jpeg" class="image-popup"><img src="img/萝莉.jpeg" class="img-responsive"></a></p>
+        </div>
+      </div>
+
+      <hr/>
+      <br/>
 
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40 text-center">
-          <p style="color: black;">《侏罗纪》</p>
+          <p style="color: black;">《维克多同人》</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8 col-md-offset-2 mb40">
-          <p><a href="img/恐龙1.jpeg" class="image-popup"><img src="img/恐龙1.jpeg" class="img-responsive"></a></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 mb40">
-          <p><a href="img/恐龙2.jpeg" class="image-popup"><img src="img/恐龙2.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-5 col-md-offset-3 mb40">
+          <p><a href="img/抓.jpeg" class="image-popup"><img src="img/抓.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
-      <hr />
-      <br />
+      <hr/>
+      <br/>
 
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40 text-center">
-          <p style="color: black;">《物派研究——伸》</p>
-          <p style="color: dimgray;">研究日本物派艺术理念做出的相关研究，探索物与物之间的“关系性”</p>
+          <p style="color: black;">《手绘小稿》</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/板1.png" class="image-popup"><img src="img/板1.png" class="img-responsive"></a></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/板2.png" class="image-popup"><img src="img/板2.png" class="img-responsive"></a></p>
-        </div>
-      </div>
-
-      <hr />
-      <br />
-
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 mb40 text-center">
-          <p style="color: black;">《物派研究——遇》</p>
-          <p style="color: dimgray;">李禹焕先生有关“寻求相遇”的著名理论，探讨纯粹的经验，完全去掉自己的加工，按照事实来感知，这里的经验不掺杂着某种思想，是未加辨别的自然状态</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4 mb40">
-          <p><a href="img/棍.png" class="image-popup"><img src="img/棍.png" class="img-responsive"></a></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/棍2.png" class="image-popup"><img src="img/棍2.png" class="img-responsive"></a></p>
+        <div class="col-md-8 col-md-offset-2 mb40">
+          <p><a href="img/四张图.jpeg" class="image-popup"><img src="img/四张图.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
