--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
         <div class="col-md-6 col-md-offset-3 mb40">
           <h2>郭苹</h2>
           <p>本科大连理工大学，雕塑专业</p>
+          <img src="img/宝宝.jpeg" class="img-responsive">
+        </div>
+      </div>
+
+      <hr/>
+
+      <div class="row">
+        <div class="col-md-12 col-md-offset-0 mb40 text-center">
+          <h2>作品分类</h2>
         </div>
       </div>
 
