--- a/数字雕塑.html
+++ b/数字雕塑.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40 text-center">
           <h2>数字雕塑作品</h2>
-          <p>你的一段描述</p>
+          <p>3D打印技术的出现为雕塑创作提供了新的媒介和更多的可能性，我也在尝试数字雕塑的多种形式，作品包括艺术创作以及游戏设计创作</p>
         </div>
       </div>
 
