--- a/直接材料.html
+++ b/直接材料.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40 text-center">
           <h2>直接材料作品</h2>
-          <p>你的一段描述</p>
+          <p>直接材料创作能培养对于各种材质的识别应用能力，泥塑更是作为一个雕塑人的基础，平时锻炼造型能力的同时也尝试蕴含着自己的思考</p>
         </div>
       </div>
 
