--- a/手绘.html
+++ b/手绘.html
@@ -67,9 +67,9 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40 text-center">
+        <div class="col-md-8 col-md-offset-2 mb40 text-center">
           <h2>手绘作品</h2>
-          <p>你的一段描述</p>
+          <p>在接触雕塑以前，我进行了长达12年的绘画学习，拿起画笔涂涂画画是我一直以来不变的爱好，从素描彩铅水彩到板绘，尝试了各种绘画方式</p>
         </div>
       </div>
 
