--- a/数字雕塑.html
+++ b/数字雕塑.html
@@ -84,13 +84,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/猴子1.png" class="image-popup"><img src="img/猴子1.png" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/猴子1.jpeg" class="image-popup"><img src="img/猴子1_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/猴子2.png" class="image-popup"><img src="img/猴子2.png" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/猴子2.jpeg" class="image-popup"><img src="img/猴子2_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -105,15 +105,15 @@
       </div>
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/瘦1.png" class="image-popup"><img src="img/瘦1.png" class="img-responsive"></a></p>
+          <p><a href="img/瘦1.jpeg" class="image-popup"><img src="img/瘦1.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-md-offset-2">
-          <p><a href="img/瘦3.png" class="image-popup"><img src="img/瘦3.png" class="img-responsive"></a></p>
+        <div class="col-md-3 col-md-offset-3">
+          <p><a href="img/瘦3.jpeg" class="image-popup"><img src="img/瘦3.jpeg" class="img-responsive"></a></p>
         </div>
-        <div class="col-md-4">
-          <p><a href="img/瘦2.png" class="image-popup"><img src="img/瘦2.png" class="img-responsive"></a></p>
+        <div class="col-md-3">
+          <p><a href="img/瘦2.jpeg" class="image-popup"><img src="img/瘦2.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -128,16 +128,16 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/胖妞2.png" class="image-popup"><img src="img/胖妞2.png" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/胖妞2.jpeg" class="image-popup"><img src="img/胖妞2_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-md-offset-1">
-          <p><a href="img/胖妞1.png" class="image-popup"><img src="img/胖妞1.png" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-2">
+          <p><a href="img/胖妞1.jpeg" class="image-popup"><img src="img/胖妞1_small.jpeg" class="img-responsive"></a></p>
         </div>
         <div class="col-md-6">
-          <p><a href="img/胖妞3.png" class="image-popup"><img src="img/胖妞3.png" class="img-responsive"></a></p>
+          <p><a href="img/胖妞3.jpeg" class="image-popup"><img src="img/胖妞3_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -152,13 +152,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8 col-md-offset-2 mb40">
-          <p><a href="img/老鼠1.jpeg" class="image-popup"><img src="img/老鼠1.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-6 col-md-offset-3 mb40">
+          <p><a href="img/老鼠1.jpeg" class="image-popup"><img src="img/老鼠1_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8 col-md-offset-2 mb40">
-          <p><a href="img/老鼠2.jpeg" class="image-popup"><img src="img/老鼠2.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-6 col-md-offset-3 mb40">
+          <p><a href="img/老鼠2.jpeg" class="image-popup"><img src="img/老鼠2_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -171,13 +171,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8 col-md-offset-2 mb40">
-          <p><a href="img/恐龙1.jpeg" class="image-popup"><img src="img/恐龙1.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-6 col-md-offset-3 mb40">
+          <p><a href="img/恐龙1.jpeg" class="image-popup"><img src="img/恐龙1_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8 col-md-offset-2 mb40">
-          <p><a href="img/恐龙2.jpeg" class="image-popup"><img src="img/恐龙2.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-6 col-md-offset-3 mb40">
+          <p><a href="img/恐龙2.jpeg" class="image-popup"><img src="img/恐龙2_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -191,13 +191,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/板1.png" class="image-popup"><img src="img/板1.png" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/板1.jpeg" class="image-popup"><img src="img/板1_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/板2.png" class="image-popup"><img src="img/板2.png" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/板2.jpeg" class="image-popup"><img src="img/板2_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -211,13 +211,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-md-offset-4 mb40">
-          <p><a href="img/棍.png" class="image-popup"><img src="img/棍.png" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-5 mb40">
+          <p><a href="img/棍.jpeg" class="image-popup"><img src="img/棍_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/棍2.png" class="image-popup"><img src="img/棍2.png" class="img-responsive"></a></p>
+          <p><a href="img/棍2.jpeg" class="image-popup"><img src="img/棍2_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
