--- a/直接材料.html
+++ b/直接材料.html
@@ -84,18 +84,18 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/仕女1.jpeg" class="image-popup"><img src="img/仕女1.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/仕女1.jpeg" class="image-popup"><img src="img/仕女1_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/仕女2.jpeg" class="image-popup"><img src="img/仕女2.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/仕女2.jpeg" class="image-popup"><img src="img/仕女2_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/仕女3.jpeg" class="image-popup"><img src="img/仕女3.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/仕女3.jpeg" class="image-popup"><img src="img/仕女3_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -109,8 +109,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/甄姬.jpeg" class="image-popup"><img src="img/甄姬.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/甄姬.jpeg" class="image-popup"><img src="img/甄姬_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       
@@ -123,8 +123,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/大卫.jpeg" class="image-popup"><img src="img/大卫.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/大卫.jpeg" class="image-popup"><img src="img/大卫_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -137,23 +137,23 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-10 col-md-offset-1 mb40">
-          <p><a href="img/泥塑1.jpeg" class="image-popup"><img src="img/泥塑1.jpeg" class="img-responsive"></a></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1 mb40">
-          <p><a href="img/泥塑2.jpeg" class="image-popup"><img src="img/泥塑2.jpeg" class="img-responsive"></a></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1 mb40">
-          <p><a href="img/泥塑3.jpeg" class="image-popup"><img src="img/泥塑3.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-6 col-md-offset-3 mb40">
+          <p><a href="img/泥塑1.jpeg" class="image-popup"><img src="img/泥塑1_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/全身.jpeg" class="image-popup"><img src="img/全身.jpeg" class="img-responsive"></a></p>
+          <p><a href="img/泥塑2.jpeg" class="image-popup"><img src="img/泥塑2_small.jpeg" class="img-responsive"></a></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 mb40">
+          <p><a href="img/泥塑3.jpeg" class="image-popup"><img src="img/泥塑3_small.jpeg" class="img-responsive"></a></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/全身.jpeg" class="image-popup"><img src="img/全身_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
