--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <div class="row probootstrap-gutter16">
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="数字雕塑.html" class="img-bg" style="background-image: url(img/猴子1.png);">
+          <a href="数字雕塑.html" class="img-bg" style="background-image: url(img/猴子1_small.jpeg);">
             <div class="probootstrap-photo-details">
               <h2>数字雕塑作品</h2>
               <p>更多...</p>
@@ -91,7 +91,7 @@
           </a>
         </div>
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="直接材料.html" class="img-bg" style="background-image: url(img/仕女1.jpeg);">
+          <a href="直接材料.html" class="img-bg" style="background-image: url(img/仕女1_small.jpeg);">
             <div class="probootstrap-photo-details">
               <h2 style="color: black;">直接材料作品</h2>
               <p style="color: black;">更多...</p>
@@ -99,7 +99,7 @@
           </a>
         </div>
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="手绘.html" class="img-bg" style="background-image: url(img/老太太.jpeg);">
+          <a href="手绘.html" class="img-bg" style="background-image: url(img/老太太_small.jpeg);">
             <div class="probootstrap-photo-details">
               <h2>手绘作品</h2>
               <p>更多...</p>
