--- a/手绘.html
+++ b/手绘.html
@@ -83,8 +83,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/老太太.jpeg" class="image-popup"><img src="img/老太太.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/老太太.jpeg" class="image-popup"><img src="img/老太太_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -97,8 +97,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/速写.jpeg" class="image-popup"><img src="img/速写.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/速写.jpeg" class="image-popup"><img src="img/速写_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       
@@ -111,13 +111,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/两个手.jpeg" class="image-popup"><img src="img/两个手.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/两只手.jpeg" class="image-popup"><img src="img/两只手_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 mb40">
-          <p><a href="img/两个手2.jpeg" class="image-popup"><img src="img/两个手2.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/两只手2.jpeg" class="image-popup"><img src="img/两只手2_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -130,8 +130,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8 col-md-offset-2 mb40">
-          <p><a href="img/包饺子.jpeg" class="image-popup"><img src="img/包饺子.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-6 col-md-offset-3 mb40">
+          <p><a href="img/包饺子.jpeg" class="image-popup"><img src="img/包饺子_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -144,8 +144,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-5 col-md-offset-3 mb40">
-          <p><a href="img/萝莉.jpeg" class="image-popup"><img src="img/萝莉.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/萝莉.jpeg" class="image-popup"><img src="img/萝莉_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
@@ -172,8 +172,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8 col-md-offset-2 mb40">
-          <p><a href="img/四张图.jpeg" class="image-popup"><img src="img/四张图.jpeg" class="img-responsive"></a></p>
+        <div class="col-md-4 col-md-offset-4 mb40">
+          <p><a href="img/四张图.jpeg" class="image-popup"><img src="img/四张图_small.jpeg" class="img-responsive"></a></p>
         </div>
       </div>
 
