--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="直接材料.html" class="img-bg" style="background-image: url(img/仕女1_small.jpeg);">
             <div class="probootstrap-photo-details">
-              <h2 style="color: black;">直接材料作品</h2>
-              <p style="color: black;">更多...</p>
+              <h2>直接材料作品</h2>
+              <p>更多...</p>
             </div>
           </a>
         </div>
